filter data of table tCR0002_v2.0 according to table tCR0063

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,19 +5,19 @@
     "version": "0.2.0",
     "configurations": [
         //Ubuntu
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceFolder}/neo4jDB_update.js"
-        },
-
-        //windows
         // {
         //     "type": "node",
         //     "request": "launch",
         //     "name": "Launch Program",
-        //     "program": "${workspaceRoot}\\neo4jDB_update.js"
-        // }
+        //     "program": "${workspaceFolder}/neo4jDB_update.js"
+        // },
+
+        //windows
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Program",
+            "program": "${workspaceRoot}\\neo4jDB_update.js"
+        }
     ]
 }
